# cmake-example

./: CMakeLists.txt  LICENSE
cmd/: main.c
pkg/: CMakeLists.txt
pkg/binutils/: CMakeLists.txt  binutils.c  binutils.h
pkg/otherlib/: CMakeLists.txt  otherlib.c  otherlib.h
